Оновлення Лабораторної номер 4

--- a/lab_4/style.css
+++ b/lab_4/style.css
@@ -176,7 +176,7 @@ body.dark-theme .experience-item:hover {
     background: #3a3a3a;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
-body.dark-theme #theme-toggle {
+body.dark-theme #theme-toggle, body.dark-theme #open-feedback {
     background: white;
 }
 
@@ -190,10 +190,75 @@ body.dark-theme #theme-toggle {
     cursor: pointer;
     font-size: 1.2rem;
     transition: all 0.3s ease;
+    z-index: 1000; /* Перекриває інші елементи */
 }
 
-body.dark-theme #theme-toggle:hover, #theme-toggle:hover {
+body.dark-theme #theme-toggle:hover, #theme-toggle:hover, #open-feedback:hover, body.dark-theme #open-feedback:hover {
     transform: scale(1.1);
     background: #f6ad55;
+}
+
+/* Стилі для кнопки відкриття форми */
+#open-feedback {
+    position: fixed;
+    bottom: 80px;
+    right: 20px;
+    background: grey;
+    padding: 10px 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 1.2rem;
+    transition: all 0.3s ease;
+    z-index: 1000; /* Перекриває інші елементи */
+}
+
+
+/* Стилі для модального вікна */
+#feedback-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    //z-index: 1000; /* Важливо! */
+    width: 80%;
+    max-width: 400px;
+}
+
+#feedback-modal button {
+    background: #f6ad55;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: all 0.3s ease;
+}
+
+#feedback-modal button {
+    background: #f6ad55;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: all 0.3s ease;
+}
+#feedback-modal button:hover {
+    background: #e67e22;
+}
+
+#feedback-modal input, 
+#feedback-modal textarea {
+    width: 100%;
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
 
